fix: layout shift and vertical timeline height.

--- a/index.css
+++ b/index.css
@@ -226,7 +226,7 @@ header span > b::before {
   transform: translate(42.5px, 0);
 
   width: 2px;
-  height: 3830px;
+  height: 3860px;
 
   background: #fff;
   opacity: 0.2;
